finished caesar function and added preliminary tests

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "live-server",
     "start:solution": "npm run -it docker:build && npm run docker:run",
     "test": "mocha test",
-    "test:solution": "npm run docker:build && npm run docker:test"
+    "test:solution": "npm run docker:build && npm run docker:test",
+    "preinstall": "npx npm-force-resolutions"
   },
   "keywords": [],
   "author": "",
@@ -19,5 +20,8 @@
     "chai": "^4.2.0",
     "live-server": "^1.2.1",
     "mocha": "^8.1.3"
+  },
+  "resolutions": {
+    "glob-parent": "^6.0.0"
   }
 }
